Kubernetes/Traefik-External-Service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  externalName: 192.168.200.75
  type: ExternalName
  ports:
    - name: websecure
      port: 8006
      targetPort: 8006
