Kubernetes/Traefik-External-Service/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.proxmox.l0t.us`)
      kind: Rule
      services:
        - name: proxmox
          port: 8006
          scheme: https
          passHostHeader: true
    - match: Host(`proxmox.l0t.us`)
      kind: Rule
      services:
        - name: proxmox
          port: 8006
          scheme: https
          passHostHeader: true
      middlewares:
        - name: default-headers
  tls:
    secretName: jimsgarage-tls
